--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- This is a comment! -->
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <title>My Site Title</title>
+  </head>
+  <body>
+    <!-- Your content goes here -->
+  </body>
+</html><!-- Your code here -->
