--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <!-- This is a comment! -->
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>My Site Title</title>
-  </head>
-  <body>
+</head>
+<body>
     <!-- Your content goes here -->
-  </body>
-</html><!-- Your code here -->
+    <h1>Hello, World!</h1>
+</body>
+</html>
